[gd_scene load_steps=10 format=3 uid="uid://v2n6kagtwcir"]

[ext_resource type="Script" path="res://scripts/ui/options.gd" id="1_xvj2k"]
[ext_resource type="Texture2D" uid="uid://mw4c783e2jd2" path="res://scenes/ui/Krabb_Skybox_V3.png" id="2_yeawb"]
[ext_resource type="Texture2D" uid="uid://cb7re8kjsto2g" path="res://scenes/ui/ui_options_menu.png" id="3_q0jwh"]
[ext_resource type="FontFile" uid="uid://bvt2lwacyhmkq" path="res://scenes/ui/Crush Bubble.otf" id="4_y0oyd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t3oew"]
texture = ExtResource("2_yeawb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1850k"]
texture = ExtResource("3_q0jwh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_550v5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mnf7r"]
bg_color = Color(0.494118, 0.670588, 0.768627, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lb21w"]
bg_color = Color(0.494118, 0.670588, 0.768627, 0)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xvj2k")

[node name="Panel8" type="Panel" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 645.0
theme_override_styles/panel = SubResource("StyleBoxTexture_t3oew")

[node name="Panel" type="Panel" parent="."]
offset_left = -21.0
offset_top = -39.0
offset_right = 1160.0
offset_bottom = 797.0
theme_override_styles/panel = SubResource("StyleBoxTexture_1850k")

[node name="master2" type="Label" parent="."]
offset_left = 65.0
offset_top = 207.0
offset_right = 141.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(0.823529, 0.92549, 0.92549, 1)
theme_override_fonts/font = ExtResource("4_y0oyd")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_550v5")
text = "Master"

[node name="volume2" type="Label" parent="."]
offset_left = 65.0
offset_top = 236.0
offset_right = 141.0
offset_bottom = 279.0
theme_override_colors/font_color = Color(0.823529, 0.92549, 0.92549, 1)
theme_override_fonts/font = ExtResource("4_y0oyd")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_550v5")
text = "Volume"

[node name="sfx2" type="Label" parent="."]
offset_left = 65.0
offset_top = 264.0
offset_right = 141.0
offset_bottom = 307.0
theme_override_colors/font_color = Color(0.823529, 0.92549, 0.92549, 1)
theme_override_fonts/font = ExtResource("4_y0oyd")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_550v5")
text = "SFX"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 287.0
offset_right = 155.0
offset_bottom = 318.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_y0oyd")
theme_override_styles/hover = SubResource("StyleBoxFlat_mnf7r")
theme_override_styles/normal = SubResource("StyleBoxFlat_lb21w")

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 163.0
offset_top = 111.0
offset_right = 207.0
offset_bottom = 135.0

[node name="Master" parent="." instance=ExtResource("4_qxpnq")]
layout_mode = 0
offset_left = 145.0
offset_top = 213.0
offset_right = 238.0
offset_bottom = 229.0
value = 50.0

[node name="HSlider2" type="HSlider" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 240.0
offset_right = 237.0
offset_bottom = 256.0
value = 50.0

[node name="HSlider3" type="HSlider" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 268.0
offset_right = 237.0
offset_bottom = 284.0
value = 50.0

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 173.0
offset_top = 170.0
offset_right = 252.0
offset_bottom = 202.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_y0oyd")

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
